# dotme

./: .gitignore  Cargo.toml  README.md  toolchain.toml
.github/workflows/: test-suite.yml
dotme-cli/: Cargo.toml
dotme-cli/src/: dotme_panic.rs  main.rs
dotme-core/: Cargo.toml  config.toml
dotme-core/src/: config.rs  lib.rs  path_utils.rs  repo.rs  shell.rs
dotme-core/src/cmd/: clone.rs  init.rs  mod.rs  status.rs
dotme-core/tests/: config.rs  config.toml
dotme-path/: Cargo.toml
dotme-path/src/: lib.rs
dotme-path/src/interpolate_env/: error.rs  mod.rs  tests.rs
dotme-test/: Cargo.toml
dotme-test/src/: lib.rs
src/: config.rs  main.rs
src/cmd/: status.rs
