[package]
name = "dotme-core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.76"
directories = { workspace = true }
git2 = { workspace = true }
serde = "1.0.194"
serde_derive = "1.0.194"
toml = "0.8.8"
which = "5.0.0"
dotme-test = { path = "../dotme-test" }
