[package]
name = "dotme-core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
directories = { workspace = true }
git2 = { workspace = true }
thiserror = { workspace = true }
serde = "1.0.194"
serde_derive = "1.0.194"
toml = "0.8.8"
which = "5.0.0"
dotme-test = { path = "../dotme-test" }
